Add play.erb to display player name and edited text in form of idex.erb

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,10 +1,10 @@
 <form action="/names" method="post">
 	<div>
-		<label for="Player 1">Player_1</label>
+		<label for="Player 1">Add name for Player 1</label>
 		<input type="text" name="player_1">
 	</div>
 	<div>
-		<label for="Player_2">Player_2</label>
+		<label for="Player_2">Add name for Player 2</label>
 		<input type="text" name="player_2">
 	</div>
 	<div>
