--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,7 +4,7 @@
 		<input type="text" name="player_1">
 	</div>
 	<div>
-		<label for="Player_2">Add name for Player 2</label>
+		<label for="Player 2">Add name for Player 2</label>
 		<input type="text" name="player_2">
 	</div>
 	<div>
