Refactor play erb/view to pass points spec test

--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,2 +1,1 @@
-<h1>Player 1: <%=@player1%></h1>
-<h1>Player 2: <%=@player2%></h1>
+<h1>Player 1: <%=@player1%> (100HP) VS Player 2: <%=@player2%> (100HP) </h1>
