--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,1 +1,9 @@
 <h1>Player 1: <%=@player1%> (100HP) VS Player 2: <%=@player2%> (100HP) </h1>
+
+<div>	
+	<button type="button">Player 1 Attack!</button>
+</div>
+
+<p>
+	Player 1 has attacked Player 2
+</p>
