--- a/lib/views/attack.erb
+++ b/lib/views/attack.erb
@@ -1,3 +1,3 @@
-<h1><%= @player1.name %> has attacked <%= @player2.name %></h1>
+<h1><%= @game.first_player.name %> has attacked <%= @game.second_player.name %></h1>
 
 <a href="/play">Return to Game</a>
