--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,4 +1,4 @@
-<h1>Player 1: <%=@player1.name%> (<%=@player1.hitpoints%>HP) VS Player 2: <%=@player2.name%> (<%=@player2.hitpoints%>HP) </h1>
+<h1>Player 1: <%=@game.first_player.name%> (<%=@game.first_player.hitpoints%>HP) VS Player 2: <%=@game.second_player.name%> (<%=@game.second_player.hitpoints%>HP) </h1>
 
 <form action="/attack">
 	<input type="submit" value="Attack!">
