--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,6 +1,6 @@
 <h1>Player 1: <%=@game.first_player.name%> (<%=@game.first_player.hitpoints%>HP) VS Player 2: <%=@game.second_player.name%> (<%=@game.second_player.hitpoints%>HP) </h1>
 
-<h2>It is <%=@game.current_turn.name%>'s turn</h2>
+<h2>It is <%=@game.current_turn.name%>'s Turn</h2>
 
 <form action="/attack">
 	<input type="submit" value="Attack!">
